--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
             </div>
             <div class="imgSequence">
-                
+                <div class="arrowUp">&uarr;</div>
+                <div class="arrowDown">&darr;</div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
             </div>
         </div>
     </div>
