--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Slideshow</title>
 </head>
@@ -11,16 +12,28 @@
     <div class="container">
         <div class="slider">
             <div class="imgWithText">
-
+                <div class="box">
+                    <img src="img/01.jpg" alt="">
+                </div>
             </div>
             <div class="imgSequence">
-                <div class="arrowUp">&uarr;</div>
-                <div class="arrowDown">&darr;</div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+                <div class="arrowUp"><i class="fas fa-chevron-up"></i></div>
+                <div class="arrowDown"><i class="fas fa-chevron-down"></i></div>
+                <div class="boxList">
+                    <img src="img/01.jpg" alt="">
+                </div>
+                <div class="boxList">
+                    <img src="img/02.jpg" alt="">
+                </div>
+                <div class="boxList">
+                    <img src="img/03.jpg" alt="">
+                </div>
+                <div class="boxList">
+                    <img src="img/04.jpg" alt="">
+                </div>
+                <div class="boxList">
+                    <img src="img/05.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
