--- a/index.html
+++ b/index.html
@@ -15,25 +15,31 @@
                 <div class="box">
                     <img src="img/01.jpg" alt="">
                 </div>
-            </div>
-            <div class="imgSequence">
-                <div class="arrowUp"><i class="fas fa-chevron-up"></i></div>
-                <div class="arrowDown"><i class="fas fa-chevron-down"></i></div>
-                <div class="boxList">
-                    <img src="img/01.jpg" alt="">
-                </div>
-                <div class="boxList">
+                <div class="box active">
                     <img src="img/02.jpg" alt="">
                 </div>
-                <div class="boxList">
+            </div>
+            <div class="textImg">
+                
+            </div>
+            <div class="imgSequence">
+                <div class="boxList opacity">
+                    <img src="img/01.jpg" alt="">
+                </div>
+                <div class="boxList opacity">
+                    <img src="img/02.jpg" alt="">
+                </div>
+                <div class="boxList opacity">
                     <img src="img/03.jpg" alt="">
                 </div>
-                <div class="boxList">
+                <div class="boxList opacity">
                     <img src="img/04.jpg" alt="">
                 </div>
-                <div class="boxList">
+                <div class="boxList opacity">
                     <img src="img/05.jpg" alt="">
                 </div>
+                <div class="arrowUp"><i class="fas fa-chevron-up"></i></div>
+                <div class="arrowDown"><i class="fas fa-chevron-down"></i></div>
             </div>
         </div>
     </div>
