--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body class="debug">
     <div class="container">
         <div class="slider">
-            <div class="imgWithText">
+
+            <div class="country">
             </div>
+
+            <div class="imgWithText"></div>
+
             <div class="imgSequence">
                 <div class="arrowUp"><i class="fas fa-chevron-up"></i></div>
                 <div class="arrowDown"><i class="fas fa-chevron-down"></i></div>
